// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render with skin link 1`] = `
<button
  class="button link"
>
  <span
    class="text"
  />
</button>
`;

exports[`Should render with skin primary 1`] = `
<button
  class="button primary"
>
  <span
    class="text"
  />
</button>
`;

exports[`Should render with skin secondary 1`] = `
<button
  class="button secondary"
>
  <span
    class="text"
  />
</button>
`;

exports[`should render disabled with skin secondary 1`] = `
<button
  class="button secondary"
  disabled=""
>
  <span
    class="text"
  />
</button>
`;
